2008-10-03  Thomas Wagner  <tom68@users.sourceforge.net>
        * SFEsamba.spec: *NEW* 3.2.4 security fix / want standalone PDC for Domain-Logons

2008-10-02  Brian Cameron  <brian.cameron@sun.com>

	* patches/elisa-02-defaultdict.diff: Fix defaultdict issue properly,
	  using same patch which is now upstream.

2008-10-02 Mark Wright <markwright@internode.on.net>

	* SFEgpgme.spec: Remove lib/libgpgme-pth.la, if it is built.
	* SFEclaws-mail.spec: Detect aspell, disable pgp to avoid compile error

2008-10-02  Brian Cameron  <brian.cameron@sun.com>

	* SFEpython-pymetar.spec: Move the installed python code to 
	  vendor-packages instead of site-packages.

2008-10-02  Brian Cameron  <brian.cameron@sun.com>

	* SFEpython-cssutils.spec: Fix packaging so the easy-install.pth
	  issue mentioned in my last ChangeLog entry (2008-09-30) is addressed.

2008-10-02 Mark Wright <markwright@internode.on.net>

	* SFEdeluge.spec, patches/deluge-01-sunpro.diff: Bump to 0.5.9.1, bump
	  patch1
	* SFEemacs.spec: Bump to 22.3
	* SFElibetpan.spec: *NEW* email library
	* SFEgnupg2.spec: Patch 3 and 4 to correct build issues on sol10
	* patches/gnupg2-03-jnlib-Makefile.diff: Patch from KDE4 project
	* patches/gnupg2-04-keyserver-sm-Makefile.diff: Patch from KDE4 project
	* SFElibpcap.spec: Bump to 0.9.8
	* SFEgnochm.spec: Bump to 0.9.11
	* SFEclaws-mail.spec: *NEW* GTK+ email client.

2008-09-30  Brian Cameron  <brian.cameron@sun.com>

	* SFEelisa-plugins-bad.spec, patches/elisa-plugins-bad-nohashlib.diff:
	  Add a patch to replace some hashlib.md5 functions with md5.md5 so
	  it generates less error messages when using Python 2.4.
	* patches/elisa-02-defaultdict.diff:  Fix patch so it works better.
	* SFEpython-cssutils.spec: Avoid installing the easy-install.pth
	  file for now.  Python-Twisted 8.1 also wants to install this file
	  and I'm not yet sure how to manange this.

2008-09-30  Brian Cameron  <brian.cameron@sun.com>
